--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
   <link rel="stylesheet" href="main.css">
-  <title>HTML Portfolio</title>
+  <title>Steven's HTML Portfolio</title>
+  Welcome to the HTML Portfolio Project
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
-
+<div class=header>
+    <h1>Steven's Portfolio Website Test</h1>
+    <h2>My current occupation?...Explorer</h2>
+    </div>
+ <div class=tagline>
+    <h3>About Me<br>This is where I would list interesting or trivial things about myself.</h3>
+     </div>
+    <div class=skills>
+    <ul>My current skillset:
+        <li>HTML</li>
+        <li>Wasting time</li>
+        <li>Sick gainz</li>
+        </ul>
+    </div>
+    <div class=contact> 
+        <h3>This would be me contact info section!</h3>
+        <a href="https://www.google.com">On the interwebz.</a>
+    </div>
 </body>
 </html>
