--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,12 @@
     <h2>My current occupation?...Explorer</h2>
     </div>
  <div class=tagline>
-    <h3>About Me<br>This is where I would list interesting or trivial things about myself.</h3>
+    <h3>About Me
+        <p>This is where I would list interesting or trivial things about myself.</p></h3>
      </div>
     <div class=skills>
-    <ul>My current skillset:
+    <h3>My current skillset:</h3>
+        <ul>
         <li>HTML</li>
         <li>Wasting time</li>
         <li>Sick gainz</li>
@@ -24,7 +26,9 @@
     </div>
     <div class=contact> 
         <h3>This would be me contact info section!</h3>
-        <a href="https://www.google.com">On the interwebz.</a>
+        <p>
+        Try to find me <a href="https://www.google.com">on the interwebz.</a> 
+        </p>
     </div>
 </body>
 </html>
