--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,13 @@
         <p>This is where I would list interesting or trivial things about myself.</p></h3>
      </div>
     <div class=skills>
-    <h3>My current skillset:</h3>
+    <h3>SKILLZ</h3>
+        <p>My current skillset is as follows:
         <ul>
         <li>HTML</li>
         <li>Wasting time</li>
         <li>Sick gainz</li>
-        </ul>
+        </ul></p>
     </div>
     <div class=contact> 
         <h3>This would be me contact info section!</h3>
